--- a/styles/customStyles/service-page-template.scss
+++ b/styles/customStyles/service-page-template.scss
@@ -3,7 +3,7 @@
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
     position: -webkit-sticky; /* Safari */
     position: sticky;
-    top: 70px;
+    top: 65px;
     z-index: 10;
     box-shadow:0px 2px 15px -1px rgba(56,56,56,0.1);
 
